--- a/css/styles.css
+++ b/css/styles.css
@@ -68,12 +68,28 @@ img {display: block;}
 .nav-link 
 {
     display: block;
+    position: relative;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    padding: 24px 0;}
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:active::after 
+{
+    display: block;
+    position: absolute;
+    top: calc(100% - 3px);
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    content: "";
+}
 
 address {font-style: normal;}
 
@@ -85,6 +101,7 @@ address {font-style: normal;}
     letter-spacing: 0.02em;
     color: #434455;
     padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-link:hover,
@@ -100,7 +117,10 @@ address {font-style: normal;}
 .section-hero {
     padding: 188px 0;
     background-color: #2e2f42;
-
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/hero-background.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
 }
 
 .hero-title 
@@ -133,6 +153,7 @@ address {font-style: normal;}
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -169,6 +190,17 @@ address {font-style: normal;}
 
 .advantages-item:not(:last-child) {
     margin-right: 24px;
+}
+
+.advantages-item-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f4f4fd;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    height: 112px;
+    margin-bottom: 8px;
 }
 
 .advanatges-item-title
@@ -227,7 +259,7 @@ address {font-style: normal;}
 }
 
 .team-item-card {
-    padding: 32px 0;
+    padding: 32px 16px;
 }
 
 .team-item-title
@@ -247,6 +279,28 @@ address {font-style: normal;}
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
+    margin-bottom: 8px;
+}
+
+.social-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.social-list-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #4d5ae5;
+    fill: white;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-list-link:hover {
+    background-color: #404bbf;
 }
 
 /* portfolio */
@@ -282,6 +336,16 @@ address {font-style: normal;}
     border-right: 1px solid #e7e9fc;
 }
 
+.portfolio-item-wrapper {
+    cursor: pointer;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item-wrapper:hover {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-item-title
 {
     font-weight: 500;
@@ -299,12 +363,45 @@ address {font-style: normal;}
     letter-spacing: 0.02em;
 } 
 
+.portfolio-item-img {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-overlay {
+    position:  absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    overflow: auto;
+    transition: top 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item-wrapper:hover .portfolio-overlay {
+    top: 0;
+}
+
 /* footer */
 
 .page-footer {
     padding: 100px 0;
     background-color: #2e2f42;}
 
+.footer-container {
+    display: flex;
+}
+
+.footer-wrapper-logo {
+    margin-right: 120px;
+}
 .footer-logo {
     display: inline-block;
     margin-bottom: 16px;
@@ -322,5 +419,22 @@ address {font-style: normal;}
     letter-spacing: 0.02em;
     max-width: 264px;
     color: #f4f4fd;
+}
+
+.footer-wrapper-social {
+    width: 208px;
+}
+
+.footer-social-list {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+}
+
+.page-footer .social-list-link:hover {
+    background-color: #31d0aa;
 }
 
