--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ address {font-style: normal;}
 .section-hero {
     padding: 188px 0;
     background-color: #2e2f42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/hero-background.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-background.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
