--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,9 @@ img {display: block;}
 
 /* header */
 
-.page-header {border-bottom: 1px solid #e7e9fc;}
+.page-header {box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);}
 
 .page-header .container {
     display: flex;
@@ -68,7 +70,6 @@ img {display: block;}
 .nav-link 
 {
     display: block;
-    position: relative;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -78,7 +79,11 @@ img {display: block;}
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-link:active::after 
+.nav-link.current {
+    position: relative;
+}
+
+.nav-link.current::after 
 {
     display: block;
     position: absolute;
@@ -88,7 +93,7 @@ img {display: block;}
     height: 4px;
     border-radius: 2px;
     background-color: #404bbf;
-    content: "";
+    content: '';
 }
 
 address {font-style: normal;}
@@ -107,7 +112,8 @@ address {font-style: normal;}
 .nav-link:hover,
 .nav-link:focus,
 .contacts-link:hover,
-.contacts-link:focus 
+.contacts-link:focus,
+.nav-link.current
 {
     color: #404bbf;
 }
@@ -115,11 +121,14 @@ address {font-style: normal;}
 /* hero */
 
 .section-hero {
+    max-width: 1440px;
     padding: 188px 0;
+    margin-left: auto;
+    margin-right: auto;
     background-color: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero-background.jpg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
 }
 
@@ -259,7 +268,7 @@ address {font-style: normal;}
 }
 
 .team-item-card {
-    padding: 32px 16px;
+    padding: 32px 0px;
 }
 
 .team-item-title
@@ -284,7 +293,8 @@ address {font-style: normal;}
 
 .social-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 24px;
 }
 
 .social-list-link {
