--- a/css/styles.css
+++ b/css/styles.css
@@ -305,11 +305,15 @@ address {font-style: normal;}
     height: 40px;
     border-radius: 50%;
     background-color: #4d5ae5;
-    fill: white;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover {
+.social-list-icon {
+    fill: #f4f4fd;
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
     background-color: #404bbf;
 }
 
