--- a/css/styles.css
+++ b/css/styles.css
@@ -291,13 +291,16 @@ address {font-style: normal;}
     margin-bottom: 8px;
 }
 
-.social-list {
+.social-list 
+{
     display: flex;
     justify-content: center;
-    gap: 24px;
 }
 
-.social-list-link {
+.team-item-card .social-list {gap: 24px;}
+
+.social-list-link 
+{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -308,12 +311,13 @@ address {font-style: normal;}
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-icon {
+.social-list-icon 
+{
     fill: #f4f4fd;
 }
 
-.social-list-link:hover,
-.social-list-link:focus {
+.team-item-card .social-list-link:hover,
+.team-item-card .social-list-link:focus {
     background-color: #404bbf;
 }
 
@@ -411,6 +415,7 @@ address {font-style: normal;}
 
 .footer-container {
     display: flex;
+    align-items: baseline;
 }
 
 .footer-wrapper-logo {
@@ -439,6 +444,8 @@ address {font-style: normal;}
     width: 208px;
 }
 
+.footer-wrapper-social .social-list {gap: 16px;}
+
 .footer-social-list {
     font-weight: 500;
     font-size: 16px;
@@ -448,7 +455,9 @@ address {font-style: normal;}
     margin-bottom: 16px;
 }
 
-.page-footer .social-list-link:hover {
+.footer-wrapper-social .social-list-link:hover,
+.footer-wrapper-social .social-list-link:focus,
+{
     background-color: #31d0aa;
 }
 
