--- a/css/styles.css
+++ b/css/styles.css
@@ -354,13 +354,13 @@ address {font-style: normal;}
     border-right: 1px solid #e7e9fc;
 }
 
-.portfolio-item-wrapper {
+.portfolio-item {
     cursor: pointer;
     box-shadow: 0 0 0 rgba(0, 0, 0, 0);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item-wrapper:hover {
+.portfolio-item:hover {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
@@ -381,30 +381,31 @@ address {font-style: normal;}
     letter-spacing: 0.02em;
 } 
 
-.portfolio-item-img {
+.thumb {
     position: relative;
     overflow: hidden;
 }
 
 .portfolio-overlay {
     position:  absolute;
-    top: 100%;
+    top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #4d5ae5;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-    padding: 40px 32px;
     overflow: auto;
-    transition: top 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        width: 100%;
+        height: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item-wrapper:hover .portfolio-overlay {
-    top: 0;
+.portfolio-item:hover .portfolio-overlay {
+    transform: translateY(0%);
 }
 
 /* footer */
@@ -456,7 +457,7 @@ address {font-style: normal;}
 }
 
 .footer-wrapper-social .social-list-link:hover,
-.footer-wrapper-social .social-list-link:focus,
+.footer-wrapper-social .social-list-link:focus
 {
     background-color: #31d0aa;
 }
